# ManGen

./: CMakeLists.txt  Doxyfile  README.md
src/: errors.h  exclude.c  exclude.h  hash.c  hash.h  main.c  version.h  walker.c  walker.h
test/: CMakeLists.txt  test_basic.sh  test_exclude_exact.sh  test_help.sh  test_version.sh
